--- a/package.json
+++ b/package.json
@@ -42,14 +42,16 @@
     ]
   },
   "dependencies": {
+    "@capacitor/cli": "^2.4.7",
+    "@capacitor/core": "^2.4.7",
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^5.0.0-beta3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-helmet": "^6.1.0",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
