--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "dependencies": {
+    "@capacitor/android": "^2.4.7",
     "@capacitor/cli": "^2.4.7",
     "@capacitor/core": "^2.4.7",
     "@popperjs/core": "^2.9.1",
